[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "jpterm"
version = "0.2.18"
description = "Jupyter in the terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [ { name = "David Brochart", email = "david.brochart@gmail.com" }, ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = [
    "jupyter",
    "textual",
]
dependencies = [
    "rich-click >=1.6.0",
    "txl ==0.2.18",
    "txl_cell ==0.2.13",
    "txl_console ==0.2.15",
    "txl_editors ==0.2.13",
    "txl_file_browser ==0.2.13",
    "txl_image_viewer ==0.2.13",
    "txl_jpterm ==0.2.13",
    "txl_kernel ==0.2.13",
    "txl_local_contents ==0.2.13",
    "txl_local_terminals ==0.2.13",
    "txl_local_kernels ==0.2.13",
    "txl_notebook_editor ==0.2.13",
    "txl_remote_contents ==0.2.13",
    "txl_remote_terminals ==0.2.13",
    "txl_remote_kernels ==0.2.13",
    "txl_text_editor ==0.2.13",
    "txl_markdown_viewer ==0.2.13",
    "txl_terminal ==0.2.13",
    "txl_launcher ==0.2.13",
    "txl_widgets ==0.2.14",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[project.scripts]
jpterm = "jpterm.cli:main"

[project.urls]
Homepage = "https://github.com/davidbrochart/jpterm"

[tool.hatch.version]
path = "jpterm/__init__.py"

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.envs.dev]
pre-install-commands = [
    "pip install pre-commit",
    "pip install textual",
    "pip install textual-dev",
    "pip install -e ./txl",
    "pip install -e ./plugins/cell",
    "pip install -e ./plugins/console",
    "pip install -e ./plugins/editors",
    "pip install -e ./plugins/file_browser",
    "pip install -e ./plugins/image_viewer",
    "pip install -e ./plugins/jpterm",
    "pip install -e ./plugins/kernel",
    "pip install -e ./plugins/local_contents",
    "pip install -e ./plugins/local_terminals",
    "pip install -e ./plugins/local_kernels",
    "pip install -e ./plugins/notebook_editor",
    "pip install -e ./plugins/remote_contents",
    "pip install -e ./plugins/remote_terminals",
    "pip install -e ./plugins/remote_kernels",
    "pip install -e ./plugins/text_editor",
    "pip install -e ./plugins/markdown_viewer",
    "pip install -e ./plugins/terminal",
    "pip install -e ./plugins/launcher",
    "pip install -e ./plugins/widgets",

    'pip install "jupyterlab>=4"',
    'pip install "jupyter-collaboration >=2"',
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]

[tool.ruff]
line-length = 100
