[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "jpterm"
version = "0.3.10"
description = "Jupyter in the terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [ { name = "David Brochart", email = "david.brochart@gmail.com" }, ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = [
    "jupyter",
    "textual",
]
dependencies = [
    "rich-click >=1.6.0",
    "txl >=0.3.3,<0.4.0",
    "txl_cell >=0.3.7,<0.4.0",
    "txl_console >=0.3.7,<0.4.0",
    "txl_editors >=0.3.7,<0.4.0",
    "txl_file_browser >=0.3.7,<0.4.0",
    "txl_image_viewer >=0.3.7,<0.4.0",
    "txl_jpterm >=0.3.8,<0.4.0",
    "txl_kernel >=0.3.9,<0.4.0",
    "txl_local_contents >=0.3.7,<0.4.0",
    "txl_local_terminals >=0.3.8,<0.4.0",
    "txl_local_kernels >=0.3.7,<0.4.0",
    "txl_notebook_editor >=0.3.7,<0.4.0",
    "txl_remote_contents >=0.3.7,<0.4.0",
    "txl_remote_terminals >=0.3.7,<0.4.0",
    "txl_remote_kernels >=0.3.7<0.4.0",
    "txl_text_editor >=0.3.7,<0.4.0",
    "txl_markdown_viewer >=0.3.7,<0.4.0",
    "txl_terminal >=0.3.7,<0.4.0",
    "txl_launcher >=0.3.7,<0.4.0",
    "txl_widgets >=0.3.7<0.4.0",
]

[dependency-groups]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[project.scripts]
jpterm = "jpterm.cli:main"

[project.urls]
Homepage = "https://github.com/davidbrochart/jpterm"

[tool.uv.workspace]
members = ["plugins/*", "txl"]

[tool.uv.sources]
jpterm = { workspace = true }
txl = { workspace = true }
txl-cell = { workspace = true }
txl-console = { workspace = true }
txl-editors = { workspace = true }
txl-file_browser = { workspace = true }
txl-image_viewer = { workspace = true }
txl-jpterm = { workspace = true }
txl-kernel = { workspace = true }
txl-local_contents = { workspace = true }
txl-local_terminals = { workspace = true }
txl-local_kernels = { workspace = true }
txl-notebook_editor = { workspace = true }
txl-remote_contents = { workspace = true }
txl-remote_terminals = { workspace = true }
txl-remote_kernels = { workspace = true }
txl-text_editor = { workspace = true }
txl-markdown_viewer = { workspace = true }
txl-terminal = { workspace = true }
txl-launcher = { workspace = true }
txl-widgets = { workspace = true }

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]

[tool.ruff]
line-length = 100
