[metadata]
name = jpterm
version = attr: jpterm.__version__
description = Jupyter in the terminal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/davidbrochart/jpterm
platforms = Windows, Linux, Mac OS X
keywords = jupyter

[bdist_wheel]
universal = 1

[options]
packages = find:
python_requires = >=3.7
