[metadata]
name = jpterm
version = attr: jpterm.__version__
description = Jupyter in the terminal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/davidbrochart/jpterm
platforms = Windows, Linux, Mac OS X
keywords = jupyter

[bdist_wheel]
universal = 1

[options]
packages = find:
python_requires = >=3.7

install_requires =
  pydantic
  websockets
  httpx
  typer >=0.4.0
  jupyverse
  textual

[options.extras_require]
test =
  mypy
  flake8
  black
  pytest

[options.entry_points]
console_scripts =
    jpterm = jpterm.jpterm:cli

[flake8]
max-line-length = 100
