[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl"
version = "0.2.20"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "asphalt >=4.12.0,<5",
  "textual[syntax] >=1.0.0,<2.0.0",
]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/txl"
