[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "txl"
version = "0.3.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "fps >=0.5.1,<0.6.0", "textual[syntax] >=5.0.1,<6.0.0",]
[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/txl"
