[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_cell"
version = "0.2.14"
description = "TXL plugin for a cell"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl >=0.2.18,<0.3.0",
  "pycrdt >=0.8.11,<0.9.0",
]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/cell"

[project.entry-points]
"asphalt.components" = {cell = "txl_cell.components:CellComponent"}
"txl.components"     = {cell = "txl_cell.components:CellComponent"}
