[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_console"
description = "TXL plugin for a Jupyter console"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl",
  "jupyter-ydoc >=2.0.0,<3.0.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/console"

[project.entry-points]
"asphalt.components" = {console = "txl_console.components:ConsoleComponent"}
"txl.components"     = {console = "txl_console.components:ConsoleComponent"}

[tool.hatch.version]
path = "txl_console/__init__.py"
