[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_editors"
description = "TXL plugin for editors"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/editors"

[project.entry-points.txl_component]
txl_editors = "txl_editors.components"

[tool.hatch.version]
path = "txl_editors/__init__.py"
