[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_file_browser"
description = "TXL plugin for a file browser"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/file_browser"

[project.entry-points]
"asphalt.components" = {file_browser = "txl_file_browser.components:FileBrowserComponent"}
"txl.components"     = {file_browser = "txl_file_browser.components:FileBrowserComponent"}

[tool.hatch.version]
path = "txl_file_browser/__init__.py"
