[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_image_viewer"
description = "TXL plugin for an image viewer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl",
  "textual-imageview >=0.1.1",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/image_viewer"

[project.entry-points.txl_component]
txl_image_viewer = "txl_image_viewer.components"

[tool.hatch.version]
path = "txl_image_viewer/__init__.py"
