[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "txl_image_viewer"
version = "0.3.6"
description = "TXL plugin for an image viewer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "txl ==0.3.2", "textual-imageview >=0.1.1",]
[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/image_viewer"

[project.entry-points."fps.modules"]
image_viewer = "txl_image_viewer.main:ImageViewerModule"

[project.entry-points."txl.modules"]
image_viewer = "txl_image_viewer.main:ImageViewerModule"
