[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_jpterm"
description = "TXL plugin for the jpterm app"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl",
  "txl_file_browser",
  "txl_editors",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/jpterm"

[project.entry-points.txl_component]
txl_jpterm = "txl_jpterm.components"

[tool.hatch.version]
path = "txl_jpterm/__init__.py"
