[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "txl_kernel"
version = "0.3.7"
description = "TXL plugin for a kernel driver"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "txl ==0.3.2", "python-dateutil >=2.8.2", "pycrdt >=0.10.9,<0.13.0",]
[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/kernel"
