[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_local_contents"
description = "TXL plugin for local contents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl",
  "anyio >=3.7.0,<5",
  "jupyter-ydoc >=2.0.0,<3.0.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/local_contents"

[project.entry-points]
"asphalt.components" = {local_contents = "txl_local_contents.components:LocalContentsComponent"}
"txl.components"     = {local_contents = "txl_local_contents.components:LocalContentsComponent"}

[tool.hatch.version]
path = "txl_local_contents/__init__.py"
