[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "txl_local_contents"
version = "0.3.6"
description = "TXL plugin for local contents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "txl ==0.3.2", "anyio >=3.7.0,<5", "jupyter-ydoc >=3.0.2,<4.0.0",]
[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/local_contents"

[project.entry-points."fps.modules"]
local_contents = "txl_local_contents.main:LocalContentsModule"

[project.entry-points."txl.modules"]
local_contents = "txl_local_contents.main:LocalContentsModule"
