[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_local_kernels"
description = "TXL plugin for local kernels"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl",
  "txl_kernel",
  "pyzmq >=24.0.1",
  "ipykernel",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/local_kernels"

[project.entry-points]
"asphalt.components" = {local_kernels = "txl_local_kernels.components:LocalKernelsComponent", local_kernelspecs = "txl_local_kernels.components:LocalKernelspecsComponent"}
"txl.components"     = {local_kernels = "txl_local_kernels.components:LocalKernelsComponent", local_kernelspecs = "txl_local_kernels.components:LocalKernelspecsComponent"}

[tool.hatch.version]
path = "txl_local_kernels/__init__.py"
