[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "txl_local_terminals"
description = "TXL plugin for local terminals"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txl",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/local_terminals"

[project.entry-points.txl_component]
txl_local_terminals = "txl_local_terminals.components"

[tool.hatch.version]
path = "txl_local_terminals/__init__.py"
