[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "txl_local_terminals"
version = "0.3.6"
description = "TXL plugin for local terminals"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "txl ==0.3.2", "pywinpty;platform_system=='Windows'", "anyio >=3.7.0,<5",]
[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/local_terminals"

[project.entry-points."txl.modules"]
local_terminals = "txl_local_terminals.main:LocalTerminalsModule"
