[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "txl_markdown_viewer"
version = "0.3.6"
description = "TXL plugin for a Markdown viewer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "txl ==0.3.2",]
[[project.authors]]
name = "David Brochart"
email = "david.brochart@gmail.com"

[project.urls]
Source = "https://github.com/davidbrochart/jpterm/plugins/markdown_viewer"

[project.entry-points."fps.modules"]
markdown_viewer = "txl_markdown_viewer.main:MarkdownViewerModule"

[project.entry-points."txl.modules"]
markdown_viewer = "txl_markdown_viewer.main:MarkdownViewerModule"
